--- a/WelcomeVUno/WelcomeVUno.Android/WelcomeVUno.Android.csproj
+++ b/WelcomeVUno/WelcomeVUno.Android/WelcomeVUno.Android.csproj
@@ -82,6 +82,7 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\drawable\w.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
